Deployment files plus job feature